@@ -60,6 +60,7 @@
       <tr><td>Bill Schnellinger</td></tr>
       <tr><td>Bertrand Ave</td></tr>
       <tr><td>Alblas Huibert</td></tr>
+      <tr><td>Kalyanaraman Venkatasubramaniy</td></tr>
     </table>
 
     <h2>Credits</h2>
